--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CharacterGen</title>
   </head>
   <body>
-    <header></header>
+    <main>
+      <img src="#" />
+      <p>#</p>
+    </main>
+    <section>
+      <label for="email">email:</label>
+
+      <input type="email" id="email" name="email" required minlength="4" />
+
+      <label for="pass">password:</label>
+
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+        minlength="6"
+      />
+      <div>
+        <button class="#" type="button">log In</button>
+        <button class="#" type="button">Sign Up</button>
+      </div>
+    </section>
   </body>
 </html>
